Add .idea/CENTaUR.iml and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 __pycache__/
+/shelf/
+/workspace.xml
+
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
